[project]
name = "apify-google-maps-contributor-reviews-api"
version = "0.1.0"
description = "Example client for the Google Maps Contributor Reviews API Apify Actor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=3.0.0,<4",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
